--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,20 @@
 			<systemPath>${project.basedir}/src/tplibs/org.wso2.carbon.databridge.commons_4.0.0.SNAPSHOT.jar</systemPath>
 		</dependency>
 		<dependency>
+			<groupId>org.wso2.carbon</groupId>
+			<artifactId>org.wso2.carbon.databridge.commons.thrift</artifactId>
+			<version>4.0.0.SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/tplibs/org.wso2.carbon.databridge.commons.thrift_4.0.0.SNAPSHOT.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon</groupId>
+			<artifactId>org.wso2.carbon.logging</artifactId>
+			<version>4.0.0.SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/tplibs/org.wso2.carbon.logging_4.0.0.SNAPSHOT.jar</systemPath>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.thrift</groupId>
 			<artifactId>libthrift</artifactId>
 			<version>0.7.0</version>
